# dcv-color-primitives

./: .gitignore  .travis.yml  Cargo.toml  NEWS  README.md  build.rs  genweights.py  meson.build  run-bench.ps1  run-bench.sh  run-coverage.sh
.cargo/: config  config.toml
.github/workflows/: ci.yml
benches/: benches.rs  geninput.py
build-aux/: getversion.py
c_tests/: meson.build  unit.c
include/: dcp.h  dcv_color_primitives.h  meson.build
src/: color_space.rs  cpu_info.rs  dispatcher.rs  lib.rs  pixel_format.rs  static_assert.rs
src/convert_image/: avx2.rs  common.rs  mod.rs  neon.rs  sse2.rs  x86.rs
tests/: common.rs  conversions.rs  errors.rs  genweights.rs  tests.rs
