[package]
name = "dcv-color-primitives"
version = "0.6.0"
edition = "2018"
description = "a library to perform image color model conversion"
license = "MIT-0"
repository = "https://github.com/aws/dcv-color-primitives"
authors = ["Fabio Lagalla <lagfabio@amazon.com>"]
readme = "README.md"
keywords = ["colors", "converter", "rgb", "yuv", "video"]
categories = ["graphics"]

[lib]
name = "dcv_color_primitives"
crate-type = ["staticlib", "rlib"]

[dependencies]
paste = "1.0"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}
itertools = "0.10"
rand = "0.8"

[target.'cfg(target_os="linux")'.dev-dependencies]
perf-event = "0.4.6"

[[bench]]
name = "benches"
harness = false

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[features]
test_instruction_sets = []
