[package]
name = "dcv-color-primitives"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
description = "a library to perform image color model conversion"
license = "MIT-0"
repository = "https://github.com/aws/dcv-color-primitives"
authors = ["Fabio Lagalla <lagfabio@amazon.com>"]
readme = "README.md"
keywords = ["colors", "converter", "rgb", "yuv", "video"]
categories = ["graphics"]

[lib]
name = "dcv_color_primitives"
crate-type = ["staticlib", "rlib"]

[dependencies]
paste = "1.0.15"

[dev-dependencies]
criterion = {version = "0.8.1", features = ["html_reports"]}
itertools = "0.14.0"
rand = "0.9.2"

[target.'cfg(target_os="linux")'.dev-dependencies]
perf-event = "0.4.8"

[[bench]]
name = "benches"
harness = false

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.56"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.106"

[features]
test_instruction_sets = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
